--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html lang="it" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title></title>
   </head>
   <body>
 
   <div class="container">
 
-    <header>
-      <nav>
+    <header class="logo">
 
-      </nav>
     </header>
 
+    <nav class="nav_logo">
+
+    </nav>
 
 
-    <aside class="">
+    <aside class="left_column">
 
     </aside>
 
