Layout pagina wordpress
Finalizzazione layout pagina wordpress

--- a/index.html
+++ b/index.html
@@ -10,39 +10,28 @@
   <div class="container">
 
     <header class="logo">
-
     </header>
 
     <nav class="nav_logo">
-
     </nav>
 
-
-    <aside class="left_column">
-
+    <aside class="left_column fl">
     </aside>
 
-
-    <main>
-
+    <main class="main_page fl">
+      <div class="marginleftandright">
+      </div>
     </main>
 
-    <aside></aside>
-    <aside></aside>
-    <aside></aside>
+    <aside class="right_column fr">
+      <div class="column_right one"></div>
+      <div class="column_right two"></div>
+      <div class="column_right three"></div>
+    </aside>
 
-
-    <footer></footer>
-
-
-
+    <footer class="footer_page fl"></footer>
 
   </div>
-
-
-
-
-
 
   </body>
 </html>
